# python-psignifit

./: .flake8  .gitignore  .psignifit-flask-app.py.swp  .readthedocs.yml  .travis.yml  CITATION.cff  CONTRIBUTORS  COPYRIGHT  README.md  __init__.py  borders.py  conftest.py  create_contributor_list.py  demo.html  demo_001.py  demo_002.py  demo_003.py  demo_005.py  demo_006.py  evaluate.py  getConfRegion.py  getSigmoidHandle.py  getWeights.py  gridSetting.py  likelihood.py  notes.md  parms.txt  priors.py  psignifit-flask-app.py  psignifit.py  psigniplot.py  pyproject.toml  pytest.ini  request_layer.py  setup.py  stats_manual.py  utils.py
.github/workflows/: build-docs.yml  cd-release.yml  ci-tests.yml  test.yml
demos/: parameter_recovery_in_logspace_demo.ipynb  parameters_estimates.ipynb
docs/: .gitignore  _config.yml  _toc.yml  basic-usage.md  conf.py  docs-environment.yml  getting_started.rst  index.md  index.rst  install_guide.md  install_guide.rst  produce_sigmoid_plot_for_docs.py  produce_sigmoid_plot_for_docs_advanced.py  requirements.txt  test_MATLAB_version.rst
docs/_static/: .gitkeep
docs/examples/: additional-functionality.md  advanced-options.md  basic-options.md  bias-analysis.md  demo_001.md  demo_002.md  demo_003.md  demo_004.md  demo_005.md  demo_006.md  map_vs_mean.md  parameter_recovery_demo.md  parameter_recovery_in_logspace_demo.md  plot_all_sigmoids.md  plotting.md  pooling_example_data.csv  pooling_utilities.md  priors.md  results-object.md
docs/how_to/: How-to-Change-the-Threshold-Percent-Correct.md  How-to-Change-the-Threshold-Percent-Correct.rst  How-to-Fix-Parameters.md  How-to-Fix-Parameters.rst  index.rst  (+5 more)
examples/: parameter_recovery_in_logspace_demo.ipynb  parameters_estimates.ipynb
plotting/: plot_all_sigmoids.py
psignifit/: __init__.py  _confidence.py  _configuration.py  _matlab.py  _parameter.py  _pooling.py  _posterior.py  _priors.py  _result.py  _sigmoids.py  _typing.py  _utils.py  bias.py  borders.py  bounds.py  conf.py  configuration.py  getConfRegion.py  getSeed.py  getSigmoidHandle.py  getStandardParameters.py  getWeights.py  gridSetting.py  likelihood.py  marginalize.py  poolData.py  pooling.py  priors.py  psignifit.py  psignifit_new.py  psignifit_old.py  psigniplot.py  result.py  sigmoids.py  tools.py  typing.py  utils.py
request_layer/: readme.md
templates/: .demo.html.swp  demo.html
tests/: fixtures.py  test_basic.py  test_confidence.py  test_configuration.py  test_numpy_scalars.py  test_param_recovery.py  test_pooling.py  test_posterior.py  test_priors.py  test_psignifit.py  test_result.py  test_sigmoids.py
(+48 files in other folders)
