[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psignifit"
version = "4.1a"
requires-python = ">= 3.10"
dependencies = [
  "scipy",
  "matplotlib",
]
readme = {file = "README.md", content-type = "text/markdown"}
# Python psignifit - based on Matlab psignifit by Heiko Schütt with help from
# Felix Wichmann, Jakob Macke and Stefan Harmeling.
# Refactoring done by multiple researchers, see Github contributors.
authors = [
  {name = "psignifit contributors, www.wichmann-lab.org"},
]
maintainers = [
  {name = "psignifit contributors, www.wichmann-lab.org"},
]
description = "Toolbox for Bayesian psychometric function estimation"
license = {file = "COPYRIGHT"}
keywords = ["psychometric", "psychophysics", "function", "statistics"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "http://www.wichmann-lab.org/"
Documentation = "https://psignifit.readthedocs.io/en/latest/"
Repository = "https://github.com/wichmann-lab/python-psignifit.git"
Issues = "https://github.com/wichmann-lab/python-psignifit/issues"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "flake8"]
docs = [
    'sphinx',
    'sphinx-gallery',
    'sphinx_rtd_theme',
    'matplotlib',
]
